--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.555.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-pdf": "^7.6.0",
     "react-router-dom": "^6.20.1",
     "zustand": "^4.4.7"
