--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "form-data": "^4.0.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "pg": "^8.11.3",
