--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,10 +17,12 @@ COPY . .
 # Accept build arguments
 ARG VITE_BACKEND_API_URL
 ARG VITE_MAYAN_API_URL
+ARG VITE_KEYCLOAK_URL
 
 # Set environment variables for build
 ENV VITE_BACKEND_API_URL=$VITE_BACKEND_API_URL
 ENV VITE_MAYAN_API_URL=$VITE_MAYAN_API_URL
+ENV VITE_KEYCLOAK_URL=$VITE_KEYCLOAK_URL
 
 # Build production bundle
 RUN npm run build
