--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.0",
     "axios": "^1.6.2",
     "lucide-react": "^0.555.0",
+    "oidc-client-ts": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
