--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# MayanConnect Environment Variables Example
+# Coffre-Fort Environment Variables Example
 # Copy this file to .env and fill in the values
 
 # ============================================
