--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mayanconnect-frontend",
+  "name": "coffrefort-frontend",
   "version": "1.0.0",
   "description": "Coffre-Fort Frontend - Client Application",
   "type": "module",
